--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-build
-coverage
+# IDE
+.idea
+
+# yarn & dependencies
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+yarn-debug.log*
+yarn-error.log*
+
+node_modules
+
+# testing
+/coverage
+
+# build folder
+/build
+
+# misc
+.DS_Store
+.eslintcache
+spec.html
